--- a/src/components/Education/Education.css
+++ b/src/components/Education/Education.css
@@ -1,7 +1,6 @@
 .Education {
   margin-top: 10vh;
-  height: 100vh;
-  overflow: hidden; /* Hide any overflow */
+  overflow: hidden; 
 }
 
 .Education h2 {
@@ -29,7 +28,7 @@
   width: calc(40% - 70px);
   margin: 20px;
   border: none !important;
-  background: #f5f5f5 !important;
+  background: #f5f5f5 ;
   padding: 20px !important;
   font-size: 16px !important;
   box-shadow: 5px 3px #cf65ff;
@@ -39,6 +38,25 @@
   transform: translateX(100%);
   transition: transform 0.5s ease-out, opacity 0.5s ease-out;
   box-sizing: border-box; /* Ensure padding and border are included in width */
+  cursor: pointer;
+  
+}
+.cards:hover{
+ transform: scale(1.2);
+ animation: scale-up 0.5s forwards;
+ box-shadow: 5px 3px #f5f5f5;
+ background: #cd86ef;
+
+}
+
+@keyframes scale-up {
+  from {
+      transform: scale(1);
+  }
+
+  to {
+      transform: scale(1.08);
+  }
 }
 
 .cards.animate-left {
